--- a/k8s/concourse.yaml
+++ b/k8s/concourse.yaml
@@ -171,7 +171,7 @@ metadata:
     app: concourse
     component: worker
 spec:
-  replicas: 3
+  replicas: 1
   selector:
     matchLabels:
       app: concourse
@@ -222,3 +222,40 @@ spec:
   selector:
     app: concourse
     component: worker
+
+################################################################################
+# DOCKER-IN-DOCKER
+---
+apiVersion: apps/v1
+kind: DaemonSet
+metadata:
+  name: dind
+  namespace: concourse
+  labels:
+    app: concourse
+    component: dind
+spec:
+  selector:
+    matchLabels:
+      app: concourse
+      component: dind
+  template:
+    metadata:
+      labels:
+        app: concourse
+        component: dind
+    spec:
+      containers:
+        - name: dind
+          image: docker:18.05-dind
+          ports:
+            - containerPort: 2375
+          securityContext:
+            privileged: true
+          volumeMounts:
+            - name: dind-storage
+              mountPath: /var/lib/docker
+      volumes:
+        - name: dind-storage
+          emptyDir: {}
+
