--- a/crudlib/ci/pipeline.yaml
+++ b/crudlib/ci/pipeline.yaml
@@ -1,12 +1,21 @@
 ---
 groups:
-  - name: unit
+  - name: test
     jobs:
       - test-1.13
       - test-1.14
-  - name: integration
-    jobs:
       - test-integration
+
+  - name: pr
+    jobs:
+      - pr
+
+resource_types:
+  - name: pull-request
+    type: docker-image
+    source:
+      repository: teliaoss/github-pr-resource
+
 resources:
   - name: crudlib-git
     type: git
@@ -14,6 +23,13 @@ resources:
     source:
       uri: https://github.com/Evertras/concourseci-sandbox
       branch: master
+
+  - name: crudlib-pr
+    type: pull-request
+    check_every: 24h
+    source:
+      repository: https://github.com/Evertras/concourseci-sandbox
+      access_token: ((github.access-token))
 
   - name: golang-1.13.x-image
     type: registry-image
@@ -39,6 +55,7 @@ config-test: &config-test
     args:
       - test
       - -race
+      - -v
       - .
 
 config-test-integration: &config-test-integration
@@ -47,6 +64,7 @@ config-test-integration: &config-test-integration
   platform: linux
   params:
     TEST_INTEGRATION: 'true'
+    # This is super dumb
     DOCKER_HOST: 'tcp://10.1.188.156:2375'
   run:
     dir: crudlib-git/crudlib
@@ -54,6 +72,7 @@ config-test-integration: &config-test-integration
     args:
       - test
       - -race
+      - -v
       - .
 
 config-lint: &config-lint
@@ -114,4 +133,24 @@ jobs:
         privileged: true
         config:
           << : *config-test-integration
+  - name: pr
+    plan:
+      - get: crudlib-pr
+      - put: crudlib-pr
+        params:
+          path: crudlib-pr
+          status: pending
+      - task: test
+        image: golang-1.13.x-image
+        config:
+          << : *config-test
+        on_failure:
+          put: crudlib-pr
+          params:
+            path: crudlib-pr
+            status: failure
+      - put: crudlib-pr
+        params:
+          path: crudlib-pr
+          status: success
 
