--- a/smeeproxy/config/samples/smeeproxy_v1_smeeproxy.yaml
+++ b/smeeproxy/config/samples/smeeproxy_v1_smeeproxy.yaml
@@ -3,5 +3,6 @@ kind: SmeeProxy
 metadata:
   name: smeeproxy-sample
 spec:
-  # Add fields here
-  foo: bar
+  smeeURL: "https://smee.io/new"
+  targetURL: "http://localhost/xyz"
+
